refactor(core): move type routing ownership to executor
Keep execution plans metadata-only and make JdbcSqlExecutor own the fixed Core TypeHandlerManager. Generated mappers now carry aligned parameter routing metadata while explicit binders and row mappers retain precedence.

This removes the api-to-jdbc package dependency and intentionally changes the TypeRouting constructor contract.